; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_ui_companion_driver_get_main_window.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_ui_companion_driver_get_main_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* (i32)* }

@ui_companion = common dso_local global %struct.TYPE_3__* null, align 8
@ui_companion_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ui_companion_driver_get_main_window() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** @ui_companion, align 8
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = icmp ne %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i8* (i32)*, i8* (i32)** %8, align 8
  %10 = icmp ne i8* (i32)* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %6, %0
  store i8* null, i8** %1, align 8
  br label %18

12:                                               ; preds = %6
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i8* (i32)*, i8* (i32)** %14, align 8
  %16 = load i32, i32* @ui_companion_data, align 4
  %17 = call i8* %15(i32 %16)
  store i8* %17, i8** %1, align 8
  br label %18

18:                                               ; preds = %12, %11
  %19 = load i8*, i8** %1, align 8
  ret i8* %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
